SEE MEDICAL INFO OF PATIENT ON DOCTOR UI WORKS