@@ -68,9 +68,6 @@ public class JDBCMedicalInformationManager implements MedicalInformationManager 
     @Override
     public List<MedicalInformation> getMedicalInfoByPatientId(int patientId) {
         List<MedicalInformation> medicalInformationList = new ArrayList<>();
-        JDBCSymptomManager symptomManager = new JDBCSymptomManager(conMan);  // Instanciamos JDBCSymptomManager
-
-
         try {
             // Primer paso: Recuperar la información médica
             String sql = "SELECT * FROM medical_information WHERE patient_id = ?";
@@ -79,29 +76,24 @@ public class JDBCMedicalInformationManager implements MedicalInformationManager 
             ResultSet rs = ps.executeQuery();
 
             while (rs.next()) {
-                MedicalInformation m = new MedicalInformation();
-                m.setId(rs.getInt("id"));
-                String reportDateString = rs.getString("reportDate");
-                long millis = Long.parseLong(reportDateString);
+                MedicalInformation medicalInformation = new MedicalInformation();
+                int reportId = rs.getInt("id");
+                medicalInformation.setId(reportId);
+                String dateString = rs.getString("reportDate");
+                long millis = Long.parseLong(dateString);
                 Date reportDate = new Date(millis);
-                m.setReportDate(reportDate);
+                medicalInformation.setReportDate(reportDate);
 
-                // Recuperar la lista de medicamentos
                 String medsString = rs.getString("medication");
-                List<String> medication = (medsString == null || medsString.isEmpty())
-                        ? List.of()
-                        : List.of(medsString.split(","));
-                m.setMedication(medication);
+                List<String> medications = new ArrayList<>(Arrays.asList(medsString.split(",")));
+                medicalInformation.setMedication(medications);
 
-                // Recuperar el feedback
-                m.setFeedback(rs.getString("feedback"));
+                String feedback = rs.getString("feedback");
+                medicalInformation.setFeedback(feedback);
+                int patient_Id = rs.getInt("patient_id");
+                medicalInformation.setPatient_id(patient_Id);
 
-                // Segundo paso: Recuperar los síntomas asociados a la información médica
-                List<Symptom> symptoms = symptomManager.getSymptomsForMedicalInfo(m.getId());  // Aquí usamos el método para obtener los síntomas
-                m.setSymptoms(symptoms);  // Establecer la lista de síntomas en la información médica
-
-                // Añadir la entrada de información médica a la lista
-                medicalInformationList.add(m);
+                medicalInformationList.add(medicalInformation);
             }
 
             rs.close();
@@ -198,42 +190,7 @@ public class JDBCMedicalInformationManager implements MedicalInformationManager 
         }
     }
 
-//    @Override
-//    public List<MedicalInformation> getMedicalInformationByPatientId(int patientId) {
-//        List<MedicalInformation> medicalInfos = new ArrayList<>();
-//        String query = "SELECT * FROM medical_information WHERE patient_id = ?";
-//        PreparedStatement s = null;
-//        ResultSet rs = null;
-//
-//        try {
-//            s = c.prepareStatement(query);
-//            s.setInt(1, patientId);
-//            rs = s.executeQuery();
-//
-//            while (rs.next()) {
-//                // Aquí debes asegurarte de obtener los campos correctos y crear el objeto MedicalInformation
-//                MedicalInformation medicalInfo = new MedicalInformation();
-//                medicalInfo.setId(rs.getInt("id"));
-//                medicalInfo.setReportDate(rs.getDate("report_date"));
-//                //medicalInfo.setSymptoms(rs.getString("symptoms"));
-//                //medicalInfo.setMedication(rs.getString("medication"));
-//                medicalInfo.setFeedback(rs.getString("feedback"));
-//
-//                medicalInfos.add(medicalInfo);
-//            }
-//        } catch (SQLException e) {
-//            e.printStackTrace();
-//        } finally {
-//            try {
-//                if (rs != null) rs.close();
-//                if (s != null) s.close();
-//            } catch (SQLException e) {
-//                e.printStackTrace();
-//            }
-//        }
-//
-//        return medicalInfos;
-//    }
+
 
 
 
